Fixed bot initialization